Небольшие доработки кода.