@@ -19,15 +19,15 @@ public abstract class Herbivore extends Creature {
     public void makeMove(Point point, WorldMap map, MessageResultOfMove messageResult) {
         FinderOfPath fop = new FinderOfPath(map);
         ArrayList<Point> listPoint = fop.findOfPath(point, Predator.class);
-        if (map.getEntity(listPoint.get(listPoint.size() - 1)) instanceof Predator && (listPoint.size() - 1) <= 5) {
+        if (map.getEntity(listPoint.getLast()) instanceof Predator && (listPoint.size() - 1) <= 5) {
                 runAway(point, map, messageResult);
         }else {
             fop = new FinderOfPath(map);
             listPoint = fop.findOfPath(point, Plant.class);
-            if (map.getEntity(listPoint.get(listPoint.size() - 1)) instanceof Plant) {
+            if (map.getEntity(listPoint.getLast()) instanceof Plant) {
                 int numberOfStepsToPlant = listPoint.size() - 1;
                 if (numberOfStepsToPlant == 0) {
-                    writeMessageResult(messageResult, true, null, listPoint.get(0));
+                    writeMessageResult(messageResult, true, null, listPoint.getFirst());
                 } else if (numberOfStepsToPlant > 0 && numberOfStepsToPlant <= this.getSpeed()) {
                     writeMessageResult(messageResult, true, listPoint.get(numberOfStepsToPlant - 1), listPoint.get(numberOfStepsToPlant));
                     map.moveEntity(point, listPoint.get(numberOfStepsToPlant - 1));
@@ -36,8 +36,8 @@ public abstract class Herbivore extends Creature {
                     map.moveEntity(point, listPoint.get(getSpeed() - 1));
                 }
             } else {
-                writeMessageResult(messageResult, false, listPoint.get(listPoint.size() - 1), null);
-                map.moveEntity(point, listPoint.get(listPoint.size() - 1));
+                writeMessageResult(messageResult, false, listPoint.getLast(), null);
+                map.moveEntity(point, listPoint.getLast());
             }
         }
     }
@@ -45,14 +45,14 @@ public abstract class Herbivore extends Creature {
     private void runAway(Point point, WorldMap map, MessageResultOfMove messageResult){
 
         ArrayList<Point> listOfAroundPoint = getAroundPoint(point, map);
-        ArrayList<Point> listOfEmptyPlace = listOfAroundPoint.stream().filter(x -> map.isEmptyPlace(x)).collect(Collectors.toCollection(ArrayList::new));
+        ArrayList<Point> listOfEmptyPlace = listOfAroundPoint.stream().filter(map::isEmptyPlace).collect(Collectors.toCollection(ArrayList::new));
 
         ArrayList<Point> listOfReachable = new ArrayList<>();
-        for(int i=0; i<listOfEmptyPlace.size(); i++){
+        for (Point value : listOfEmptyPlace) {
             FinderOfPath finderOfPathObject = new FinderOfPath(map);
-            ArrayList<Point> listPoint = finderOfPathObject.findOfPath(point, listOfEmptyPlace.get(i));
-            if(listPoint.size() > 0 && listPoint.size() <= this.getSpeed()){
-                listOfReachable.add(listOfEmptyPlace.get(i));
+            ArrayList<Point> listPoint = finderOfPathObject.findOfPath(point, value);
+            if (!listPoint.isEmpty() && listPoint.size() <= this.getSpeed()) {
+                listOfReachable.add(value);
             }
         }
 
@@ -60,13 +60,13 @@ public abstract class Herbivore extends Creature {
         ArrayList<Point> listOfMaxDistancePoint = new ArrayList<>();
         Point pointToMove = null;
 
-        if(listOfReachable.size() != 0) {
+        if(!listOfReachable.isEmpty()) {
             getMapSumDistance(map, listOfReachable, tablePointDistance);
             getListOfMaxDistPoint(tablePointDistance, listOfMaxDistancePoint);
             if(listOfMaxDistancePoint.size()>1){
                 pointToMove = getRandomPoint(listOfMaxDistancePoint);
             }else if(listOfMaxDistancePoint.size() == 1){
-                pointToMove = listOfMaxDistancePoint.get(0);
+                pointToMove = listOfMaxDistancePoint.getFirst();
             }
         }
 
@@ -84,6 +84,7 @@ public abstract class Herbivore extends Creature {
                 maxEntry = entry;
             }
         }
+
         maxValue = maxEntry.getValue();
         for (Map.Entry<Point, Integer> entry : tablePointDistance.entrySet()) {
             if (entry.getValue() == maxValue) {
@@ -127,9 +128,9 @@ public abstract class Herbivore extends Creature {
         }
 
         ArrayList<Point> listOfAroundPointValid = new ArrayList<>();
-        for(int i = 0; i<listOfAroundPoint.size(); i++){
-            if(listOfAroundPoint.get(i).getX() >= 0 && listOfAroundPoint.get(i).getX() < map.getSize().getX() && listOfAroundPoint.get(i).getY() >= 0 && listOfAroundPoint.get(i).getY() < map.getSize().getY()){
-                listOfAroundPointValid.add(listOfAroundPoint.get(i));
+        for (Point value : listOfAroundPoint) {
+            if (value.getX() >= 0 && value.getX() < map.getSize().getX() && value.getY() >= 0 && value.getY() < map.getSize().getY()) {
+                listOfAroundPointValid.add(value);
             }
         }
 
